--- a/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
@@ -36,13 +36,21 @@
 	<div ng-style="pageVar.ngStyleModal" class="w3-modal">
 		<div class="w3-modal-content">
 			<div class="w3-container">
+				<div class="w3-row-padding w3-border-bottom">
+					<div class="w3-col m3 l3 s3 ">
+						<button class="w3-border" ng-click="pageVar.o.saveUpdate()">OK</button>
+						<button class="w3-border"
+							ng-click="pageVar.ngStyleModal={display:'none'}">Cancel</button>
+					</div>
+					<div class="w3-col m9 l9 s9 ">
+						<div ng-include="pageVar.o.ngIncludes.modalBottonPanel"></div>
+					</div>
+				</div>
+
 				<span ng-click="pageVar.ngStyleModal={display:'none'}"
 					class="w3-button w3-display-topright">&times;</span>
 				<p ng-if="!pageVar.rowKey">Не вибрані дані для редагування.</p>
 				<div ng-if="pageVar.rowKey">
-					<button class="w3-border" ng-click="pageVar.o.saveUpdate()">OK</button>
-					<button class="w3-border"
-						ng-click="pageVar.ngStyleModal={display:'none'}">Cancel</button>
 					<div>
 						<span ng-if="folders.selectedObj"> Папка:
 							{{folders.selectedObj.folderName}} </span>
@@ -74,6 +82,10 @@
 								ng-if="pageVar.o.no_edit.indexOf(ck)<0" class="w3-border">
 						</div>
 					</div>
+					<div class="w3-code">{{pageVar.rowObj}}</div>
+					<div class="w3-code">{{pageVar.rowObj.column_id}}
+						{{create_tables.interpretationRows[pageVar.rowObj.column_id]}}</div>
+					<div class="w3-code">{{pageVar.o.col_keys}}</div>
 				</div>
 			</div>
 		</div>
