--- a/src/main/resources/static/f/am-dev/1c-db-tables2/page.head.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/page.head.html
@@ -2,6 +2,7 @@
 	<div class="w3-col {{page.head.headClass}}">
 		<h3>
 			<a href="./create_tables2">/</a> Таблиці1C
+			 - конфігуратор БД
 		</h3>
 	</div>
 	<div class="w3-rest">
