--- a/src/main/resources/static/f/am-dev/1c-db-tables2/tableJ2C.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/tableJ2C.html
@@ -19,21 +19,24 @@
 	</tr>
 	<tr ng-repeat="tr in o.list">
 		<td ng-repeat="(ck,cv) in o.col_keys"
-title="{{tr[ck+'_id']}}"
 			ng-init="cl=o.col_links[ck];col_id=ck.replace('col_','');
 		interpretation=create_tables.interpretationRows[col_id];
+		colTypeO = create_tables.colMap[ck.split('col_')[1]];
+		ct_timestamp = colTypeO.fieldtype_id==4;
 		"
+			title="{{tr[ck+'_id']}}"
 			ng-class="{'w3-green':tr[ck]&&tr[ck]==request.parameters[cl.k]}"
-			class="w3-border w3-border-white w3-hover-border-gray"><span
-			ng-if="!cl"> {{tr[ck]}} <span ng-if="tr[ck]=='constraint'">
-					({{tr.reference2}}) </span> <span
-					class="w3-tiny"
-					 ng-if="interpretation.o">
+			class="w3-border w3-border-white w3-hover-border-gray"> 
+			<span ng-if="ct_timestamp"> {{tr[ck] | date : 'shortDate' }} {{tr[ck] |
+				date : 'hh:mm'}} </span> <span
+			ng-if="!cl && !ct_timestamp"> {{tr[ck]}}
+			 <span ng-if="tr[ck]=='constraint'">
+					({{tr.reference2}}) </span> <span class="w3-tiny" ng-if="interpretation.o">
 					<span ng-if="interpretation.o['col_190']>tr[ck]"> < N </span> <span
 					ng-if="tr[ck]>interpretation.o['col_191']"> > N <span
-					class="w3-red"
-						ng-if="tr[ck]/interpretation.o['col_191']>2"> в
-							{{(''+tr[ck]/interpretation.o['col_191']).substring(0,3)}} раза </span>
+						class="w3-red" ng-if="tr[ck]/interpretation.o['col_191']>2">
+							в {{(''+tr[ck]/interpretation.o['col_191']).substring(0,3)}} раза
+					</span>
 
 				</span>
 			</span>
@@ -43,3 +46,4 @@ title="{{tr[ck+'_id']}}"
 				{{create_tables.interpretationRows[tr.column_id].o['col_191']}} </span></td>
 	</tr>
 </table>
+
