--- a/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
@@ -42,60 +42,8 @@
 	</div>
 
 	<div ng-style="pageVar.ngStyleModal" class="w3-modal">
-		<div class="w3-modal-content">
-			<div class="w3-container">
-				<div class="w3-row-padding w3-border-bottom">
-					<div class="w3-col m3 l3 s3 ">
-						<button class="w3-border" ng-click="pageVar.o.saveUpdate()">OK</button>
-						<button class="w3-border"
-							ng-click="pageVar.ngStyleModal={display:'none'}">Cancel</button>
-					</div>
-					<div class="w3-col m9 l9 s9 ">
-						<div ng-include="pageVar.o.ngIncludes.modalBottonPanel"></div>
-					</div>
-				</div>
-
-				<span ng-click="pageVar.ngStyleModal={display:'none'}"
-					class="w3-button w3-display-topright">&times;</span>
-				<p ng-if="!pageVar.rowKey">Не вибрані дані для редагування.</p>
-				<div ng-if="pageVar.rowKey">
-					<div>
-						<span ng-if="folders.selectedObj"> Папка:
-							{{folders.selectedObj.folderName}} </span>
-					</div>
-					<!-- 
-					<div class="w3-code">{{pageVar.rowObj}}</div>
-					<div class="w3-code">{{create_tables}}</div>
-					<div class="w3-code">{{table_types}}</div>
-					 -->
-					<div ng-repeat="(ck,cv) in pageVar.o.col_keys" ng-switch="ck">
-						<b class="w3-small" title="{{ck}}">{{cv}}:</b> <span
-							ng-if="pageVar.o.no_edit.indexOf(ck)>=0">
-							{{pageVar.rowObj[ck]}} </span>
-						<div ng-switch-when="fieldtype">
-							{{pageVar.rowObj[ck]}} <select
-								ng-model="pageVar.rowObj[ck+'_id']" style="width: 100%;"
-								class="w3-border">
-								<option value="{{v1.string_id}}"
-									ng-selected="pageVar.rowObj[ck+'_id']==v1[ck+'_id']"
-									ng-repeat="v1 in table_types.list">{{v1.value}}</option>
-							</select>
-							<div ng-if="pageVar.rowObj[ck]=='constraint'">
-								table <input style="width: 100%;"
-									ng-model="pageVar.rowObj.reference2" class="w3-border">
-							</div>
-						</div>
-						<div ng-switch-default>
-							<input style="width: 100%;" ng-model="pageVar.rowObj[ck]"
-								ng-if="pageVar.o.no_edit.indexOf(ck)<0" class="w3-border">
-						</div>
-					</div>
-					<div class="w3-code">{{pageVar.rowObj}}</div>
-					<div class="w3-code">{{pageVar.rowObj.column_id}}
-						{{create_tables.interpretationRows[pageVar.rowObj.column_id]}}</div>
-					<div class="w3-code">{{pageVar.o.col_keys}}</div>
-				</div>
-			</div>
+		<div class="w3-modal-content"
+			ng-include="'/f/am-dev/1c-db-tables2/tableJ2C_edit_row.html'">
 		</div>
 	</div>
 
