persist generated sql for read table  in DB

--- a/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
@@ -38,6 +38,9 @@
 		request.parameters.tableId==124
 		"
 				ng-include="'/f/am-dev/1c-db-tables2/lab-view1.html'"></div>
+				<div
+				ng-include="'/f/am-dev/1c-db-tables2/config_j2c_sql.html'"
+				></div>
 		</div>
 	</div>
 
