--- a/src/main/resources/static/f/am-dev/1c-db-tables2/config_j2c_sql.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/config_j2c_sql.html
@@ -1,10 +1,10 @@
 <div class="w3-tiny">
-	{{table_data.params_table_data.table_id}} | <a href="#"
-		class="w3-hover-shadow"
+	<span class="am-b">{{table_data.params_table_data.table_id}}</span> | <a
+		href="#" class="w3-hover-shadow"
 		ng-click="pageVar.config.viewConfigPart='sql_read_table_data'">
 		sql_read_table_data</a> | <a href="#" class="w3-hover-shadow"
 		ng-click="pageVar.config.viewConfigPart='json_create_table'">
-		json_create_table</a> | <a href="#" ng-click="pageVar.saveSql()"
+		json_create_table</a> | <a href="#" ng-click="pageVar.saveSqlConfig()"
 		class="w3-btn w3-border">save</a>
 	<div class="w13-code w3-tiny">
 		<textarea rows="10" class="am-width-100pr"
