changed woth ris001 stable

--- a/src/main/resources/static/f/am-dev/1c-db-tables/login1.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables/login1.html
@@ -1,5 +1,7 @@
 <div ng-controller="ControllerApp1">
-	<a href="/v/info">🡡</a> 
+	<a href="/v/info"
+	class="w3-hover-shadow"
+	>🏠</a>
 	🔐 login1 
 	<span class="w3-right"> <span
 		ng-include="'/f/algoritmed/lib/link-to-login.html'"></span>
