--- a/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
@@ -18,13 +18,13 @@
 	<div class="w3-row-padding w3-border-bottom">
 		<div class="w3-col m6 l6 s6">
 			<div ng-if="17==tables.list[0].doctype">
-			документ:
+				<a href="/f/c4/j2c_json_editor.html?jsonId={{request.parameters.tableId}}">документ</a>:
 				{{tables.list[0].value}}
 				<div ng-repeat="oo in [doc_data]" class="w3-card"
 					ng-include="'/f/am-dev/1c-db-tables2/doc_17.html'"></div>
-				</div>
+			</div>
 			<div ng-if="1==tables.list[0].doctype">
-			данні таблиці
+				данні таблиці
 				<div ng-repeat="oo in [table_data]" class="w3-card"
 					ng-include="'/f/am-dev/1c-db-tables2/tableJ2C.html'"></div>
 			</div>
