--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17.html
@@ -20,4 +20,34 @@
 		ng-include="'/f/am-dev/1c-db-tables2/doc_element.html'"></div>
 	<div class="w3-code">{{oo}}</div>
 	 -->
+	<div data-ng-style="changeElement.ngStyleModal" class="w3-modal">
+		<div class="w3-modal-content">
+			<div class="w3-container">
+				<span data-ng-click="changeElement.ngStyleModal={display:'none'}"
+					class="w3-button w3-display-topright">&times;</span>
+
+				<div class="w3-row-padding w3-border-bottom">
+					<div class="w3-col m4 l4 s4 ">
+						<button class="w3-border" data-ng-click="changeElement.saveUpdate()">OK
+							запис</button>
+						<button class="w3-border"
+							ng-click="changeElement.ngStyleModal={display:'none'}">Cancel</button>
+					</div>
+					<div class="w3-col m8 l8 s8 ">
+						<div data-ng-include="pageVar.o.ngIncludes.modalBottonPanel"></div>
+					</div>
+				</div>
+				Назва: <input data-ng-model="changeElement.name"
+					class="w3-border w13-right">
+				<div>
+					JSON Element:
+					<div>
+						<textarea rows="10" class="am-width-100pr ng-binding ng-scope"
+							data-ng-model="changeElement.docbody"></textarea>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 </div>
