--- a/src/main/resources/static/f/c4/j2c_json_editor.html
+++ b/src/main/resources/static/f/c4/j2c_json_editor.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html data-ng-app="myApp" data-ng-controller="myCtrl" lang="uk-UA">
-<title>РІС список пацієнтів</title>
+<title>шаблон редактор {{request.parameters.jsonId}}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8" />
+<link rel="shortcut icon" href="/f/img/algoritmed.ico"  type="image/x-icon"/>
 <script src="/webjars/angularjs/1.7.4/angular.min.js"></script>
 <script src="/webjars/angularjs/1.7.4/angular-sanitize.min.js"></script>
 <script src="/webjars/angularjs/1.7.4/i18n/angular-locale_uk.js"></script>
