--- a/src/main/resources/static/f/am-dev/1c-db-tables2/config_j2c_sql.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/config_j2c_sql.html
@@ -15,7 +15,10 @@
 			ng-if="
 			!pageVar.config.viewConfigPart
 			|| pageVar.config.viewConfigPart=='sql_read_table_data'">
-{{table_data.params_table_data.sql.replace(':table_id',table_data.params_table_data.table_id)}}
+{{table_data.params_table_data.sql
+.replace(':table_id',table_data.params_table_data.table_id)
+.replace('LIMIT 50','')
+}}
 </textarea>
 	</div>
 </div>
