--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17.html
@@ -43,6 +43,7 @@
 					JSON Element:
 					<div>
 						<textarea rows="10" class="am-width-100pr ng-binding ng-scope"
+							data-ng-change="changeElement.changeJSON()"
 							data-ng-model="changeElement.docbody"></textarea>
 					</div>
 				</div>
