--- a/src/main/resources/static/f/am-dev/1c-db-tables2/tables_modalBottonPanel.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/tables_modalBottonPanel.html
@@ -4,6 +4,8 @@
 			ng-class="{'am-b':!pageVar.o.folderObjectType||pageVar.o.folderObjectType=='table'}"
 			ng-click="pageVar.o.addFolderObjectType('table')"> таблицю</a> | <a
 			href="#" ng-class="{'am-b':pageVar.o.folderObjectType=='doc'}"
-			ng-click="pageVar.o.addFolderObjectType('doc')"> документ </a>
+			ng-click="pageVar.o.addFolderObjectType('doc')"> документ </a> | <a
+			href="#" ng-class="{'am-b':pageVar.o.folderObjectType=='datadictionary'}"
+			ng-click="pageVar.o.addFolderObjectType('datadictionary')"> словник </a>
 	</div>
 </div>
