--- a/src/main/resources/static/f/c4/j2c_json_editor.html
+++ b/src/main/resources/static/f/c4/j2c_json_editor.html
@@ -16,7 +16,12 @@
 	href="/webjars/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
 	<div ng-include="'/f/c4/page_top_button_bar.html'"></div>
-	<div class="w3-container">Hello JSON-editor</div>
+	<div class="w3-container">
+		<span class="am-b w3-tiny" data-ng-switch="doc_data.tableRoot.doctype">
+			<span data-ng-switch-when="6">словник</span>
+			<span data-ng-switch-when="17">шаблон</span>
+		</span> JSON-editor
+	</div>
 	<div ng-repeat="oo in [doc_data]" class="w3-card"
 		ng-include="'/f/am-dev/1c-db-tables2/doc_17.html'"></div>
 </body>
