--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17.html
@@ -23,8 +23,10 @@
 				ng-include="'/f/am-dev/1c-db-tables2/doc_element.html'"></div>
 
 		</div>
-		<div class="w3-half w3-card">
-			<textarea style="width: 100%" rows="10">
+		<div class="w3-half w3-card w3-tiny">
+			<textarea s1tyle="width: 100%" rows="10"
+			class="am-width-100pr"
+			>
 {{pageVar.config.viewJson(oo.tableRoot)}}
 			</textarea>
 		</div>
