--- a/src/main/resources/static/f/c4/j2c_json_editor.html
+++ b/src/main/resources/static/f/c4/j2c_json_editor.html
@@ -22,7 +22,10 @@
 			<span data-ng-switch-when="17">шаблон</span>
 		</span> JSON-editor
 	</div>
+	<!-- 
 	<div ng-repeat="oo in [doc_data]" class="w3-card"
+	 -->
+	<div ng-repeat="oo in [doc_data_workdata]" class="w3-card"
 		ng-include="'/f/am-dev/1c-db-tables2/doc_17.html'"></div>
 </body>
 </html>
