--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
@@ -1,34 +1,42 @@
 <ul class="am-ul">
 	<li ng-repeat="el in elParent.children">
-		<div class="w3-dropdown-hover w3-white w3-hover-shadow">
-			<span class="w3-tiny ">☰ &nbsp; </span><span ng-if="!el.value">
-				col_{{el.doc_id}} </span> <span title=" col_{{el.doc_id}}" ng-if="el.value">
-				{{el.value}} </span>
-			<div class="w3-dropdown-content w3-bar-block w3-border w3-tiny"
-				style="left: -5px; width: 180px">
-				<div>
-					<a href="#" ng-click="doc_data.upElement(el)" title="догори"
-						class="w13-bar-item w3-button"><i class="fa fa-sort-asc"></i></a>
-					<a href="#" ng-click="doc_data.downElement(el)" title="донизу"
-						class="w13-bar-item w3-button"><i class="fa fa-sort-desc"></i></a>
-					| <a href="#" ng-click="doc_data.addElement(el)"
-						title="Додати запис" class="w3-button"><i class="fa fa-plus"></i></a>
-					<a href="#" ng-click="doc_data.minusElement(el)"
-						title="Видалити запис" class="w3-button"><i
-						class="fa fa-minus"></i></a>
+		<div class="w3-hover-shadow" data-ng-paste="cp.paste(el)">
+			<span class="w3-tiny w3-dropdown-hover w3-white w3-hover-shadow">☰
+				&nbsp;
+				<div class="w3-dropdown-content w3-bar-block w3-border w3-tiny"
+					style="left: -5px; width: 180px">
+					<div>
+						<a href="#" ng-click="doc_data.upElement(el)" title="догори"
+							class="w13-bar-item w3-button"><i class="fa fa-sort-asc"></i></a>
+						<a href="#" ng-click="doc_data.downElement(el)" title="донизу"
+							class="w13-bar-item w3-button"><i class="fa fa-sort-desc"></i></a>
+						| <a href="#" ng-click="doc_data.addElement(el)"
+							title="Додати запис" class="w3-button"><i class="fa fa-plus"></i></a>
+						<a href="#" ng-click="doc_data.minusElement(el)"
+							title="Видалити запис" class="w3-button"><i
+							class="fa fa-minus"></i></a>
+					</div>
+					<a href="#" class="w3-bar-item w3-button"
+						ng-click="changeElement.openDialog(el)"><i
+						class="fa fa-pencil-square-o"></i> Змінити</a>
+					<div>
+						<a href="#" ng-click="doc_data.upElement(el)" title="копія"
+							class="w13-bar-item w3-button"><i class="fa fa-copy"></i></a> <a
+							href="#" ng-click="doc_data.cutElement(el)" title="вирізка"
+							class="w13-bar-item w3-button"><i class="fa fa-cut"></i></a> <a
+							href="#" ng-click="doc_data.pasteElement(el)" title="вставка"
+							class="w13-bar-item w3-button"><i class="fa fa-paste"></i></a>
+					</div>
 				</div>
-				<a href="#" class="w3-bar-item w3-button"
-					ng-click="changeElement.openDialog(el)"><i
-					class="fa fa-pencil-square-o"></i> Змінити</a>
-				<div>
-					<a href="#" ng-click="doc_data.upElement(el)" title="копія"
-						class="w13-bar-item w3-button"><i class="fa fa-copy"></i></a> <a
-						href="#" ng-click="doc_data.cutElement(el)" title="вирізка"
-						class="w13-bar-item w3-button"><i class="fa fa-cut"></i></a> <a
-						href="#" ng-click="doc_data.pasteElement(el)" title="вставка"
-						class="w13-bar-item w3-button"><i class="fa fa-paste"></i></a>
-				</div>
-			</div>
+			</span> <span class=""> <span ng-if="!el.value && !el.reference">
+					col_{{el.doc_id}} </span> <span title=" col_{{el.doc_id}}"
+				ng-if="el.value"> {{el.value}} </span> <span
+				data-ng-if="el.reference">
+					{{datadictionary.elementsMap[el.reference].value}} <span
+					data-ng-include="'/f/am-dev/1c-db-tables2/doc_17_dd_el_values.html'"
+					data-ng-repeat="dd_el in [datadictionary.elementsMap[el.reference]]"></span>
+			</span>
+			</span>
 		</div>
 		<div ng-if="el.children">
 			<div ng-repeat="elParent in [el]"
