--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17_datadictionary.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17_datadictionary.html
@@ -1,5 +1,5 @@
 <div>
-	<span class="w3-tiny"> Словник даних </span>
+	<span class="w3-tiny"></span>
 	<div data-ng-repeat="c in datadictionary.tableRoot.docRoot.children">
 		<span class="w3-hover-shadow" data-ng-copy="cp.copy(c)">{{!c.value?
 			('el_'+c.doc_id):''}}{{c.value}}</span>: <span
