стабільний лінк в редакторі таблиць

--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17.html
@@ -22,12 +22,12 @@
 				ng-include="'/f/am-dev/1c-db-tables2/doc_element.html'"></div>
 		</div>
 		<div class="w3-half w3-card">
-			<div class="w3-tiny">
+			<div class="w3-tiny w3-border-bottom">
 				<!-- ☰ -->
-				<a href="#" class="w3-btn"
+				<a href="#" class="w3-btn  w3-padding-small"
 					data-ng-click="pageVar.config.openDatadictionary()"> <i
 					class="fa fa-th-list" aria-hidden="true"></i> Словник даних
-				</a> <a href="#" class="w3-btn"
+				</a> <a href="#" class="w3-btn  w3-padding-small"
 					ng-click="pageVar.config.viewConfigPart='json_view'"> <i
 					class="fa fa-wrench" aria-hidden="true"></i> json_create_table
 				</a>
