--- a/src/main/resources/static/f/am-dev/1c-db-tables2/tableJ2C.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/tableJ2C.html
@@ -39,7 +39,8 @@
 
 				</span>
 			</span>
-		</span> <a ng-href="{{pageVar.colLink(cl,tr)}}" ng-if="cl"> {{tr[ck]}} </a> <span
+		</span>
+		 <a ng-href="{{pageVar.colLink(cl,tr)}}" ng-if="cl"> {{tr[ck]}} </a> <span
 			ng-if="ck=='interpretation'">
 				{{create_tables.interpretationRows[tr.column_id].o['col_190']}} -
 				{{create_tables.interpretationRows[tr.column_id].o['col_191']}} </span></td>
