--- a/src/main/resources/static/f/c4/j2c_json_editor.html
+++ b/src/main/resources/static/f/c4/j2c_json_editor.html
@@ -3,7 +3,8 @@
 <title>шаблон редактор {{request.parameters.jsonId}}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8" />
-<link rel="shortcut icon" href="/f/img/algoritmed.ico"  type="image/x-icon"/>
+<link rel="shortcut icon" href="/f/img/algoritmed.ico"
+	type="image/x-icon" />
 <script src="/webjars/angularjs/1.7.5/angular.min.js"></script>
 <script src="/webjars/angularjs/1.7.5/angular-sanitize.min.js"></script>
 <script src="/webjars/angularjs/1.7.5/i18n/angular-locale_uk.js"></script>
@@ -16,19 +17,22 @@
 	href="/webjars/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
 	<div ng-include="'/f/c4/page_top_button_bar.html'"></div>
-	<div class="w3-container">
-		<span class="am-b w3-tiny" data-ng-switch="doc_data.tableRoot.doctype">
-			<span data-ng-switch-when="6">словник</span> <span
-			data-ng-switch-when="17">шаблон</span>
-		</span> <span class="w3-tiny"> JSON-editor </span> <a href="#" class="w3-btn"
-		ng-class="{'w3-border-top':pageVar.config.viewDocPart=='edit'}"
+	<div class="w3-container" style="margin-bottom: 5px">
+		<span class="w3-tiny"
+			data-ng-switch="doc_data_workdata.tableRoot.doctype"> <span
+			class="am-b w3-tiny"> <span data-ng-switch-when="6">словник</span>
+				<span data-ng-switch-when="17">шаблон</span>
+		</span> <span class="w3-tiny "> JSON-editor </span> <a href="#"
+			class="w3-btn w3-padding-small"
+			ng-class="{'w3-border-top':pageVar.config.viewDocPart=='edit'}"
 			ng-click="pageVar.config.viewDocPart='edit'"> <i
-			class="fa fa-file-text-o" aria-hidden="true"></i> edit
-		</a> <a href="#" class="w3-btn"
-		ng-class="{'w3-border-top':pageVar.config.viewDocPart=='test'}"
+				class="fa fa-file-text-o" aria-hidden="true"></i> edit
+		</a> <a href="#" class="w3-btn w3-padding-small"
+			ng-class="{'w3-border-top':pageVar.config.viewDocPart=='test'}"
 			ng-click="pageVar.config.viewDocPart='test'"> <i
-			class="fa fa-wrench" aria-hidden="true"></i> test
+				class="fa fa-wrench" aria-hidden="true"></i> test
 		</a>
+		</span>
 
 	</div>
 	<!-- 
