DB configurator or doc_manager

--- a/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
@@ -1,5 +1,10 @@
 <div>
 	<div ng-include="'/f/am-dev/1c-db-tables2/page.head.html'"></div>
+	<div class="w3-tiny w3-right">
+	<a href="/f/c4/dm/doc_manager.html">
+	менеджер документів
+	</a>
+	</div>
 	<div class="w3-row-padding w3-border-bottom">
 		<div class="w3-col m2 l2 s2 ">
 			<div ng-repeat="oo in [folders]" class="w3-card"
