--- a/src/main/resources/static/f/c4/dm/doc_manager.html
+++ b/src/main/resources/static/f/c4/dm/doc_manager.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html data-ng-app="myApp" data-ng-controller="myCtrl" lang="uk-UA">
-<title>табличний редактор {{request.parameters.jsonId}}</title>
+<title>{{pageVar.pageName}}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8" />
 <link rel="shortcut icon" href="/f/img/algoritmed.ico"
@@ -10,7 +10,7 @@
 <script src="/webjars/angularjs/1.7.5/i18n/angular-locale_uk.js"></script>
 <script src="/f/js/am-ris001.js"></script>
 <script src="/f/c4/init_j2c_json_editor.js"></script>
-<script src="/f/c4/j2c_table_editor.js"></script>
+<script src="/f/c4/dm/doc_manager.js"></script>
 <link rel="stylesheet" href="/f/css/w3.css">
 <link rel="stylesheet" href="/f/css/am.css">
 <link rel="stylesheet"
@@ -19,24 +19,21 @@
 	<div ng-include="'/f/c4/page_top_button_bar.html'"></div>
 	<div class="w3-card" style="margin-bottom: 10px">
 		<div class="w3-container">
-			<span class="w3-tiny"> <a class="am-b"
-				href="?tableId={{table.data.doc_id}}"> <i class="fa fa-table"
-					aria-hidden="true"></i> {{table.data.value }}
-			</a>&nbsp; J2C_TABLE: <a href="#" class="w3-btn w3-padding-small"
-				ng-class="{'w3-border-top':pageVar.config.viewDocPart=='create'}"
-				data-ng-click="pageVar.config.viewDocPart='create'"> <i
-					class="fa fa-wrench" aria-hidden="true"></i> create
-			</a> <a href="#" class="w3-btn w3-padding-small"
-				data-ng-class="{'w3-border-top':pageVar.config.viewDocPart=='data'}"
-				data-ng-click="pageVar.config.viewDocPart='data'"> <i
-					class="fa fa-th-list" aria-hidden="true"></i> data
-			</a>
-			</span>
+			<span class="w3-tiny am-b">менеджер документів</span>
 		</div>
 	</div>
-	<div data-ng-include="'/f/c4/j2c_table_editor_'+pageVar.config.viewDocPart+'.html'"></div>
-	<div data-ng-if="!pageVar.config.viewDocPart"
-		data-ng-include="'/f/c4/j2c_table_editor_create.html'"></div>
+	<div class="w3-row-padding">
+		<div class="w3-half ">
+			<div class="w3-tiny">☰</div>
+			<div ng-repeat="oo in [folders]" class="w3-card"
+				ng-include="'/f/am-dev/1c-db-tables2/tableJ2C.html'"></div>
+		</div>
+		<div class="w3-half w3-container">
+			<div class="w3-tiny">☰</div>
+			<div class="w3-card  w3-container">m2</div>
+		</div>
+	</div>
+
 	<div ng-style="pageVar.ngStyleModal" class="w3-modal">
 		<div class="w3-modal-content"
 			ng-include="'/f/am-dev/1c-db-tables2/tableJ2C_edit_row.html'">
