--- a/src/main/resources/static/f/c4/dm/doc_manager.html
+++ b/src/main/resources/static/f/c4/dm/doc_manager.html
@@ -30,7 +30,8 @@
 		</div>
 		<div class="w3-half w3-container">
 			<div class="w3-tiny">☰</div>
-			<div class="w3-card  w3-container">m2</div>
+			<div ng-repeat="oo in [tables]" class="w3-card"
+					ng-include="'/f/am-dev/1c-db-tables2/tableJ2C.html'"></div>
 		</div>
 	</div>
 
