--- a/src/main/resources/static/f/c4/page_top_button_bar.html
+++ b/src/main/resources/static/f/c4/page_top_button_bar.html
@@ -5,7 +5,8 @@
 				href="{{pageVar.pageParent.url}}{{pageVar.pageParent.params()}}"
 				class=" w3-btn  w3-padding-small  w3-border w3-round-xxlarge w3-hover-shadow">
 				<i class="fa fa-arrow-up w3-large" aria-hidden="true"></i>
-			</a> <a href="/"
+			</a> 
+			<a href="/"
 				class=" w3-btn  w3-border w3-padding-small  w3-round-large w3-hover-shadow">
 				<i class="fa fa-home w3-large" aria-hidden="true"></i>
 			</a>
