--- a/src/main/resources/static/f/c4/dm/doc_manager.html
+++ b/src/main/resources/static/f/c4/dm/doc_manager.html
@@ -26,12 +26,20 @@
 		<div class="w3-half ">
 			<div class="w3-tiny">☰</div>
 			<div ng-repeat="oo in [folders]" class="w3-card"
+				ng-include="'/f/c4/dm/folders.html'"></div>
+				<!-- 
+			<div ng-repeat="oo in [folders]" class="w3-card"
 				ng-include="'/f/am-dev/1c-db-tables2/tableJ2C.html'"></div>
+				 -->
 		</div>
 		<div class="w3-half w3-container">
 			<div class="w3-tiny">☰</div>
 			<div ng-repeat="oo in [tables]" class="w3-card"
-					ng-include="'/f/am-dev/1c-db-tables2/tableJ2C.html'"></div>
+				ng-include="'/f/c4/dm/documents.html'"></div>
+				<!-- 
+			<div ng-repeat="oo in [tables]" class="w3-card"
+				ng-include="'/f/am-dev/1c-db-tables2/tableJ2C.html'"></div>
+				 -->
 		</div>
 	</div>
 
@@ -40,6 +48,6 @@
 			ng-include="'/f/am-dev/1c-db-tables2/tableJ2C_edit_row.html'">
 		</div>
 	</div>
-	
+
 </body>
 </html>
