--- a/src/main/resources/static/f/c4/dm/documents.html
+++ b/src/main/resources/static/f/c4/dm/documents.html
@@ -22,7 +22,9 @@
 			href="/f/c4/j2c_json_editor.html?jsonId={{tr.doc_id}}">
 				{{tr.value}}</a></td>
 		<td class="w3-tiny w3-border w3-border-white w3-hover-border-gray">
-			<a href="?folderId={{tr.parent}}"> <i class="fa fa-folder-o"
+			<a href="?folderId={{tr.parent}}"
+			class="w3-hover-shadow w3-hover-light-gray"
+			> <i class="fa fa-folder-o"
 				aria-hidden="true"></i></a> {{tr.doctype}}
 		</td>
 	</tr>
