--- a/src/main/resources/static/f/c4/dm/folders.html
+++ b/src/main/resources/static/f/c4/dm/folders.html
@@ -16,6 +16,7 @@
 		
 		</td>
 		<td class="am-b"><span
+			class="w3-hover-shadow w3-hover-light-gray"
 			data-ng-click="o.openAllFolders = !o.openAllFolders"> <i
 				data-ng-if="!o.openAllFolders" class="fa fa-folder-o"
 				aria-hidden="true"></i> <i data-ng-if="o.openAllFolders"
@@ -63,6 +64,7 @@
 			</div></td>
 		<td class="w3-tiny w3-border w3-border-white w3-hover-border-gray"
 			title="{{tr.parent}} <- {{tr.doc_id}}"><span
+			class="w3-hover-shadow w3-hover-light-gray"
 			data-ng-click="folders.openSubFolders(tr)"> <i
 				data-ng-if="!tr.openSubFolder" class="fa fa-folder-o"
 				aria-hidden="true"></i> <i data-ng-if="tr.openSubFolder"
