--- a/src/main/resources/static/f/eh2/info/info3.html
+++ b/src/main/resources/static/f/eh2/info/info3.html
@@ -13,4 +13,6 @@
 			сайту</h3>
 		<a href="/v/info"> Інформаційна сторінка </a>
 	</div>
+	<img alt="eHealth" src="https://portal.ehealth.gov.ua/images/logo.svg"
+		width="80px;" class="">
 </div>
