--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -57,6 +57,9 @@
 		</div>
 		<div class="w3-quarter w13-border-left w13-border-right w3-small">
 			<div ng-include="'/f/ehealth-declaration/mis-list.html'"></div>
+			<img alt="eHealth" src="https://portal.ehealth.gov.ua/images/logo.svg" width="80px;"
+			class=""
+			>
 		</div>
 	</div>
 
