--- a/src/main/resources/static/f/c4/j2c_table_editor.html
+++ b/src/main/resources/static/f/c4/j2c_table_editor.html
@@ -23,7 +23,7 @@
 				href="?tableId={{table.data.doc_id}}"> <i class="fa fa-table"
 					aria-hidden="true"></i> {{table.data.value }}
 			</a>&nbsp; J2C_TABLE: <a href="#" class="w3-btn w3-padding-small"
-				ng-class="{'w3-border-top':pageVar.config.viewDocPart=='create'}"
+				data-ng-class="{'w3-border-top':pageVar.config.viewDocPart=='create'}"
 				data-ng-click="pageVar.config.viewDocPart='create'"> <i
 					class="fa fa-wrench" aria-hidden="true"></i> create
 			</a> <a href="#" class="w3-btn w3-padding-small"
@@ -39,7 +39,7 @@
 		data-ng-include="'/f/c4/j2c_table_editor_create.html'"></div>
 	<div ng-style="pageVar.ngStyleModal" class="w3-modal">
 		<div class="w3-modal-content"
-			ng-include="'/f/am-dev/1c-db-tables2/tableJ2C_edit_row.html'">
+			data-ng-include="'/f/am-dev/1c-db-tables2/tableJ2C_edit_row.html'">
 		</div>
 	</div>
 	
