--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17.html
@@ -17,9 +17,7 @@
 							Видалити запис</a>
 					</div>
 				</span>
-				{{oo.tableRoot.value}}
-				a1
-				{{oo.tableRoot.doc_id}}
+				{{oo.docHead.value}}
 			</div>
 			<div ng-repeat="elParent in [oo.tableRoot.docRoot]"
 				ng-include="'/f/am-dev/1c-db-tables2/doc_element.html'"></div>
