--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
@@ -34,10 +34,14 @@
 				class="w3-tiny"
 				title="{{doctypes_level2.map[el.doctype].p1_doctype
 				}}.{{doctypes_level2.map[el.doctype].doctype}}">[{{el.doctype}}]
-			</sub> <span data-ng-if="el.reference">
+			</sub> <span data-ng-if="el.reference"> 
+			<span
+			class="am-b"
+					data-ng-if="complex_types.map[el.reference]">
+						{{complex_types.map[el.reference].complex_type_name}}:</span>
 					{{datadictionary.elementsMap[el.reference].value}} <span
 					data-ng-include="'/f/am-dev/1c-db-tables2/doc_17_dd_el_values.html'"
-					data-ng-repeat="dd_el in [datadictionary.elementsMap[el.reference]]"></span>
+					data-ng-repeat="dd_el in [datadictionary.elementsMap[el.reference], complex_types.map[el.reference]]"></span>
 			</span>
 			</span>
 		</div>
