--- a/src/main/resources/static/f/c4/j2c_json_editor.html
+++ b/src/main/resources/static/f/c4/j2c_json_editor.html
@@ -49,6 +49,7 @@
 	</div>
 	<div class="w3-tiny" data-ng-if="doc_links.list[0]">
 		links: <span data-ng-repeat="l in doc_links.list"> <a
+		class="w3-hover-shadow"
 			href="{{l.value}}"> {{l.value}} </a>,
 		</span>
 	</div>
