init_j2c_json2table

--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17_element_type.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17_element_type.html
@@ -16,7 +16,7 @@
 		<div class="w3-half">
 			<div class="w3-tiny w3-blue-grey">Complex Types</div>
 			<table>
-				<tr class="w3-hover-shadow" data-ng-copy="cp.copy(complex_type)"
+				<tr class="w3-hover-shadow" data-ng-copy="cp.copy(complex_type, 'complex_type')"
 					data-ng-repeat="complex_type in complex_types.list">
 					<td>{{complex_type.complex_type_name}}</td>
 					<td>{{complex_type.doc_id}}</td>
