--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
@@ -1,6 +1,9 @@
 <ul class="am-ul">
 	<li ng-repeat="el in elParent.children">
-		<div class="w3-hover-shadow" data-ng-paste="cp.paste(el)">
+		<div class="w3-hover-shadow" 
+		data-ng-paste="cp.paste(el)"
+		data-ng-copy="cp.copy(el, 'this_document')"
+		>
 			<span class="w3-tiny w3-dropdown-hover w3-white w3-hover-shadow">☰
 				&nbsp;
 				<div class="w3-dropdown-content w3-bar-block w3-border w3-tiny"
@@ -33,7 +36,7 @@
 				title=" col_{{el.doc_id}}" ng-if="el.value"> {{el.value}} </span> <sub
 				class="w3-tiny"
 				title="{{doctypes_level2.map[el.doctype].p1_doctype
-				}}.{{doctypes_level2.map[el.doctype].doctype}}">[{{el.doctype}}]
+				}}.{{doctypes_level2.map[el.doctype].doctype}} {{el.doc_id}}">[{{el.doctype}}]
 			</sub> <span data-ng-if="el.reference"> 
 			<span
 			class="am-b"
