--- a/src/main/resources/static/f/c4/j2c_json_editor.html
+++ b/src/main/resources/static/f/c4/j2c_json_editor.html
@@ -10,6 +10,7 @@
 <script src="/webjars/angularjs/1.7.5/i18n/angular-locale_uk.js"></script>
 <script src="/f/js/am-ris001.js"></script>
 <script src="/f/c4/init_j2c_json_editor.js"></script>
+<script src="/r/j/n2/c5/init_j2c_json2table" ></script>
 <script src="/f/c4/j2c_json_editor.js"></script>
 <link rel="stylesheet" href="/f/css/w3.css">
 <link rel="stylesheet" href="/f/css/am.css">
@@ -23,17 +24,21 @@
 			class="am-b w3-tiny"> <span data-ng-switch-when="6">словник</span>
 				<span data-ng-switch-when="17">шаблон</span>
 		</span> <span class="w3-tiny "> JSON-editor </span> <a href="#"
+			data-ng-repeat="tab1 in ['edit','test']"
 			class="w3-btn w3-padding-small"
-			ng-class="{'w3-border-top':pageVar.config.viewDocPart=='edit'}"
-			ng-click="pageVar.config.viewDocPart='edit'"> <i
-				class="fa fa-file-text-o" aria-hidden="true"></i> edit
-		</a> <a href="#" class="w3-btn w3-padding-small"
-			ng-class="{'w3-border-top':pageVar.config.viewDocPart=='test'}"
-			ng-click="pageVar.config.viewDocPart='test'"> <i
-				class="fa fa-wrench" aria-hidden="true"></i> test
+			data-ng-class="{'w3-border-top w3-border-blue-gray':pageVar.config.viewDocPart==tab1}"
+			data-ng-click="pageVar.config.viewDocPart=tab1"> <i
+				class="fa fa-th-list" aria-hidden="true"></i> {{tab1}}
+		</a> <span class="w3-tiny ">Table-interface</span> <a href="#"
+			data-ng-repeat="tab1 in ['table_structur','table_data']"
+			class="w3-btn w3-padding-small"
+			data-ng-class="{'w3-border-top w3-border-blue-gray':pageVar.config.viewDocPart==tab1}"
+			data-ng-click="pageVar.config.viewDocPart=tab1"> <i
+				class="fa fa-th-list" aria-hidden="true"></i> {{tab1}}
 		</a>
 		</span>
 	</div>
+	<div class="w3-container w3-card" data-ng-include="'/r/h/n2/c5/json2table_'+pageVar.config.viewDocPart"></div>
 	<!-- 
 	<div ng-repeat="oo in [doc_data]" class="w3-card"
 	 -->
