--- a/src/main/resources/static/f/c4/j2c_table_editor_create.html
+++ b/src/main/resources/static/f/c4/j2c_table_editor_create.html
@@ -3,7 +3,7 @@
 		<div class="w3-half">
 			<div ng-repeat="oo in [create_tables]" class="w3-card"
 				s1tyle="height: 250px; overflow: auto;"
-				ng-include="'/f/am-dev/1c-db-tables2/tableJ2C.html'"></div>
+				data-ng-include="'/f/am-dev/1c-db-tables2/tableJ2C.html'"></div>
 		</div>
 		<div class="w3-half">
 			<div class="w3-tiny">
