--- a/src/main/resources/static/f/c4/j2c_json_editor.html
+++ b/src/main/resources/static/f/c4/j2c_json_editor.html
@@ -10,7 +10,7 @@
 <script src="/webjars/angularjs/1.7.5/i18n/angular-locale_uk.js"></script>
 <script src="/f/js/am-ris001.js"></script>
 <script src="/f/c4/init_j2c_json_editor.js"></script>
-<script src="/r/j/n2/c5/init_j2c_json2table" ></script>
+<script src="/r/j/n2/c5/init_j2c_json2table"></script>
 <script src="/f/c4/j2c_json_editor.js"></script>
 <link rel="stylesheet" href="/f/css/w3.css">
 <link rel="stylesheet" href="/f/css/am.css">
@@ -38,24 +38,18 @@
 		</a>
 		</span>
 	</div>
-	<div class="w3-container w3-card" data-ng-include="'/r/h/n2/c5/json2table_'+pageVar.config.viewDocPart"></div>
-	<!-- 
-	<div ng-repeat="oo in [doc_data]" class="w3-card"
-	 -->
+	<div class="w3-container w3-card"
+		data-ng-include="'/r/h/n2/c5/json2table_'+pageVar.config.viewDocPart"></div>
 	<div class="w3-card" ng-repeat="oo in [doc_data_workdata]">
 		<div data-ng-if="pageVar.config.viewDocPart=='test'"
 			class="w3-container" data-ng-include="'/r/h/n2/doc_220_view001'"></div>
-			<!-- 
-			class="w3-container" ng-include="'/f/c4/doc_220_view001.html'"></div>
-			 -->
 		<div
 			data-ng-if="pageVar.config.viewDocPart=='edit'||!pageVar.config.viewDocPart"
 			data-ng-include="'/f/am-dev/1c-db-tables2/doc_17.html'"></div>
 	</div>
 	<div class="w3-tiny" data-ng-if="doc_links.list[0]">
 		links: <span data-ng-repeat="l in doc_links.list"> <a
-		class="w3-hover-shadow"
-			href="{{l.value}}"> {{l.value}} </a>,
+			class="w3-hover-shadow" href="{{l.value}}"> {{l.value}} </a>,
 		</span>
 	</div>
 </body>
