--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
@@ -20,7 +20,7 @@
 							class="fa fa-minus"></i></a>
 					</div>
 					<a href="#" class="w3-bar-item w3-button"
-						ng-click="changeElement.openDialog(el)"><i
+						data-ng-click="changeElement.openDialog(el)"><i
 						class="fa fa-pencil-square-o"></i> Змінити</a>
 					<div>
 						<a href="#" ng-click="doc_data.upElement(el)" title="копія"
