--- a/src/main/resources/static/f/c4/dm/folders.html
+++ b/src/main/resources/static/f/c4/dm/folders.html
@@ -13,7 +13,7 @@
 		<a href="?">
 		<span class="am-b"> Папка </span>
 		</a>
-		
+		{{folders.selectedObj}}
 		</td>
 		<td class="am-b"><span
 			class="w3-hover-shadow w3-hover-light-gray"
