--- a/src/main/resources/static/f/c4/j2c_json_editor.html
+++ b/src/main/resources/static/f/c4/j2c_json_editor.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html data-ng-app="myApp" data-ng-controller="myCtrl" lang="uk-UA">
-<title>шаблон редактор {{request.parameters.jsonId}}</title>
+<title>{{doc_data_workdata.docHead.value}} - {{request.parameters.jsonId}}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8" />
 <link rel="shortcut icon" href="/f/img/algoritmed.ico"
