--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17_json_view.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17_json_view.html
@@ -7,3 +7,6 @@
 <textarea rows="30" class="am-width-100pr w3-tiny">
 {{pageVar.config.viewJson(oo.tableRoot)}}
 </textarea>
+<!-- 
+{{pageVar.config.viewJson(oo)}}
+ -->
