--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17.html
@@ -37,6 +37,7 @@
 					class="fa fa-wrench" aria-hidden="true"></i> element_type
 				</a>
 			</div>
+			{{pageVar.config.viewConfigPart}}
 			<div
 				data-ng-include="'/f/am-dev/1c-db-tables2/doc_17_'+pageVar.config.viewConfigPart+'.html'"></div>
 		</div>
