--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17_element_type.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_17_element_type.html
@@ -3,7 +3,7 @@
 		<div class="w3-half">
 			<div class="w3-tiny w3-blue-grey">Primitive Types</div>
 			<table>
-				<tr class="w3-hover-shadow" data-ng-copy="cp.copy(element_type)"
+				<tr class="w3-hover-shadow" data-ng-copy="cp.copy(element_type, 'primitive_type')"
 					data-ng-repeat="element_type in element_types.list">
 					<td>{{element_type.doctype }}{{element_type.doctype2?'.':''
 						}}{{element_type.doctype2}}</td>
@@ -29,6 +29,6 @@
 	</div>
 	<div class="w3-tiny">
 		<a href="https://www.hl7.org/fhir/datatypes.html"> Datatypes -
-			FHIR v3.0.1 </a>
+			FHIR v4.0.0 </a>
 	</div>
 </div>
