--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
@@ -2,6 +2,7 @@
 	<li ng-repeat="el in elParent.children">
 		<div class="w3-hover-shadow" 
 		data-ng-paste="cp.paste(el)"
+		data-ng-cut="cp.cut(el)"
 		data-ng-copy="cp.copy(el, 'this_document')"
 		>
 			<span class="w3-tiny w3-dropdown-hover w3-white w3-hover-shadow">☰
